# PolicyRAG

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/benchmarks/: ground_truth.json  run_benchmark.py
backend/policyrag/: config.py  logging_config.py  main.py  seed_data.py
backend/policyrag/api/: deps.py
backend/policyrag/api/routes/: debug.py  documents.py  evaluation.py  models.py  query.py
backend/policyrag/auth/: jwt_verifier.py  storage.py
backend/policyrag/cache/: redis_cache.py
backend/policyrag/core/: citation_extractor.py  context_builder.py  query_expander.py  rag_pipeline.py  response_assembler.py  retriever.py  sanitizer.py
backend/policyrag/db/: models.py  session.py
backend/policyrag/db/repositories/: document_repo.py  evaluation_repo.py  query_repo.py
backend/policyrag/evaluation/: citation_metrics.py  engine.py  faithfulness.py  relevance.py
backend/policyrag/ingestion/: chunker.py  edgar_client.py  embedder.py  pdf_parser.py  pipeline.py  sec_section_splitter.py
backend/policyrag/llm/: base.py  factory.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  prompts.py
backend/policyrag/schemas/: citation.py  document.py  evaluation.py  query.py
backend/tests/: conftest.py  test_api_endpoints.py  test_chunker.py  test_citation_extractor.py  test_context_builder.py  test_evaluation_engine.py  test_faithfulness.py  test_ingestion_pipeline.py  test_llm_factory.py  test_rag_pipeline.py  test_sec_section_splitter.py
frontend/: Dockerfile  index.html  (+5 more)
(+45 files in other folders)
